# KakeiBonByRust

./: .cursorrules  .gitignore  CHANGELOG.md  CHANGELOG_en.md  CHANGELOG_ja.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_en.md  CODE_OF_CONDUCT_ja.md  CONTRIBUTING.md  CONTRIBUTING_en.md  CONTRIBUTING_ja.md  Cargo.toml  READER_INSIGHTS_MEMO.md  README.md  README_en.md  README_ja.md  SECURITY.md  TODO.md  build.rs  count_lines.sh  db.sh  dev.sh  package-lock.json  package.json  stats_data.json  tarpaulin-report.html  tauri.conf.json  test_manufacturer_product.sh
.ai-context/: CONVENTIONS.md  DOCUMENTATION_REFACTORING_PHASE3.md  PROJECT_STRUCTURE.md  README.md
.github/: FUNDING.yml  copilot-instructions.md
docs/: AI_DEVELOPMENT_METRICS.md  DESIGN_ISSUES_AND_FIXES.md  INDEX_en.md  INDEX_ja.md  INPUT_SCREENS_IMPLEMENTATION.md  RELEASE_ROADMAP.md  TRANSACTION_REQUIREMENTS.md  accessibility-indicators.md  dynamic-language-menu.md  tax-calculation-logic.md
res/: account-management.html  aggregation-daily.html  aggregation-period.html  aggregation-weekly.html  aggregation-yearly.html  aggregation.html  category-management.html  consts.rs  dashboard.html  index.html  manufacturer-management.html  product-management.html  recurring-rule.html  shop-management.html  transaction-detail-management.html  transaction-management.html  user-management.html
scripts/: README.md  check-release.sh  check_i18n_resources.sh  fetch_stats.py  generate_stats_graph.py  get-github-traffic.sh  init_db.sh  update_readme_stats.py
sql/: README.md  add_dashboard_i18n.sql  (+26 more)
src/: consts.rs  (+10 more)
(+335 files in other folders)
